# lds-gen

./: .gitignore  AGENTS.md  CONTRIBUTING.md  GEMINI.md  IFLOW.md  LLM辅助硬件设计毕业设计.md  LLM辅助硬件设计毕业设计项目申请书.md  README.md  README_vdcorput.md  benchmarks.py  coverage.json  setup.cfg  setup.py  slides.md  toolchain-slides.md  visualize_distributions.py  基于SystemVerilog的低差异序列生成器设计_项目申请书.md  基于SystemVerilog的低差异序列生成器设计与实现_毕业设计.md
cpp_ai/: CMakeLists.txt  README.md  The Earth is Flat.md  build.bat  verify_conversion.py  verify_sphere_n.py  xmake.lua
cpp_ai/examples/: example.cpp
cpp_ai/include/: lds_gen.hpp
cpp_ai/include/lds_gen/: ilds.hpp  lds.hpp  sphere_n.hpp
cpp_ai/src/: ilds.cpp  lds.cpp  sphere_n.cpp
cpp_ai/tests/: doctest.h  test_ilds.cpp  test_lds.cpp  test_sphere_n.cpp
docs/: conf.py  figures_demo.rst  index.md
experiment/: LLM辅助硬件设计毕业设计.md  LLM辅助硬件设计毕业设计项目申请书.md  basic_test.sv  basic_test_sim  circle_32bit.sv  circle_32bit_tb.sv  circle_simple_sim  circle_simple_tb.sv  disk_32bit.sv  disk_32bit_tb.sv  disk_simple_sim  disk_simple_tb.sv  div_mod.py  div_mod_7_testbench  halton_32bit.sv  halton_32bit_direct.sv  halton_32bit_fixed.sv  halton_32bit_netlist.v  halton_32bit_tb.sv  halton_basic_synthesis.ys  halton_debug_tb.sv  halton_direct_sim  halton_direct_tb.sv  halton_fixed_sim  halton_fixed_tb.sv  halton_minimal.sv  halton_minimal_sim  halton_minimal_synthesis.ys  halton_minimal_test.sv  halton_poll_sim  halton_poll_test.sv  halton_sim  halton_simple_sim  halton_simple_synthesis.ys  halton_simple_tb.sv  halton_simple_test.sv  halton_simple_test_sim  halton_synthesis.ys  run_circle_sim.py  run_disk_sim.py  (+32 more)
hwdesign/: README_vdcorput_fsm.md  circle_fsm_32bit_simple.v  circle_fsm_32bit_simple_fixed.v  circle_fsm_32bit_simple_fixed_tb.v  circle_fsm_32bit_simple_tb.v  circle_fsm_32bit_simple_tb.vcd  circle_lut_test  circle_netlist.blif  circle_netlist.v  circle_netlist_test  circle_rtl_test  circle_simple_test  circle_synthesis.ys  circle_synthesis_fixed.ys  circle_test  compute_disk_values.py  compute_sphere_values.py  cordic_16bit_test  cordic_quick_test.v  cordic_simple_debug.v  cordic_test  cordic_test_simple.v  cordic_trig_16bit.v  cordic_trig_16bit_fixed.v  cordic_trig_16bit_simple.v  cordic_trig_16bit_simple_fixed.v  cordic_trig_16bit_working.v  debug_circle_angle.v  design_svg.dot  disk_fsm_32bit_simple.v  disk_fsm_32bit_simple_fixed.v  disk_fsm_32bit_simple_fixed_tb.v  (+79 more)
(+31 files in other folders)
